// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<autocomplete-multiple-selections> matches snapshot (default render) 1`] = `
<autocomplete-multiple-selections input-id="tags" label="Tags">
  <div class="autocomplete-container form-group">
    <div>
      <div>
        <label class="form-control-label" htmlfor="tags">
          <span>
            Tags
          </span>
        </label>
        <div>
          <div class="ac-multi-select-container">
            <div class="ac-selected-items"></div>
            <div class="ac-input-container">
              <div class="input-group">
                <input aria-autocomplete="list" aria-controls="tags-listbox" aria-expanded="false" aria-haspopup="listbox" aria-labelledby="" aria-required="false" autocomplete="off" class="form-control" id="tags" inputmode="text" placeholder="Tags" role="combobox" spellcheck="false" type="" value="">
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</autocomplete-multiple-selections>
`;

exports[`<autocomplete-multiple-selections> matches snapshot (open with matches and two selections made) 1`] = `
<autocomplete-multiple-selections add-btn="" editable="" input-id="tags" label="Tags">
  <div class="autocomplete-container form-group">
    <div>
      <div>
        <label class="form-control-label" htmlfor="tags">
          <span>
            Tags
          </span>
        </label>
        <div>
          <div class="ac-multi-select-container">
            <div class="ac-selected-items">
              <div class="badge">
                <span>
                  Alpha
                </span>
                <button aria-label="Remove Alpha" class="remove-btn" data-tag="Alpha" role="button" title="Remove Tag" type="button">
                  <i class="fa-circle-xmark fa-solid"></i>
                </button>
              </div>
              <div class="badge">
                <span>
                  Gamma
                </span>
                <button aria-label="Remove Gamma" class="remove-btn" data-tag="Gamma" role="button" title="Remove Tag" type="button">
                  <i class="fa-circle-xmark fa-solid"></i>
                </button>
              </div>
            </div>
            <div class="ac-input-container">
              <div class="input-group">
                <input aria-autocomplete="list" aria-controls="tags-listbox" aria-expanded="true" aria-haspopup="listbox" aria-labelledby="" aria-required="false" autocomplete="off" class="form-control" id="tags" inputmode="text" placeholder="Tags" role="combobox" spellcheck="false" type="" value="a">
                <button aria-label="Add item" class="add-btn" role="button" title="Add item" type="button">
                  <i class="fa-plus fas"></i>
                </button>
                <button aria-label="Clear input" class="clear-btn" title="Clear input" type="button">
                  <i class="fa-times fas"></i>
                </button>
              </div>
            </div>
          </div>
          <div aria-live="polite" class="autocomplete-dropdown">
            <ul id="tags-listbox" role="listbox" tabindex="-1">
              <li aria-selected="false" class="autocomplete-dropdown-item" id="tags-row-0" role="option" tabindex="-1">
                <button aria-label="Select Beta" class="option-btn" id="tags-option-0" tabindex="-1" type="button">
                  <span>
                    Beta
                  </span>
                </button>
              </li>
              <li aria-selected="false" class="autocomplete-dropdown-item" id="tags-row-1" role="option" tabindex="-1">
                <button aria-label="Select Delta" class="option-btn" id="tags-option-1" tabindex="-1" type="button">
                  <span>
                    Delta
                  </span>
                </button>
              </li>
            </ul>
          </div>
        </div>
      </div>
    </div>
  </div>
</autocomplete-multiple-selections>
`;
